kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: quizstar-portal
  labels:
    deployment: app
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: app
  template:
    metadata:
      labels:
        pod: app
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-secret
      containers:
      - name: app-container
        image: sahilphule0710/quizstar-portal:latest
        command: ['/bin/sh','./entrypoint.sh']
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: staticfiles-volume
          mountPath: /app/staticfiles/
      volumes:
      - name: staticfiles-volume
        persistentVolumeClaim:
          claimName: staticfiles-pvc
